Configure Azure Developer Pipeline

--- a/docs/workshop/workshop-1-intro.ipynb
+++ b/docs/workshop/workshop-1-intro.ipynb
@@ -183,9 +183,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ToolCall(id='call_OmpidGk7mtjuC2rk5qSxukzS', name='find_information', arguments='{\"query\":\"best educational material for learning Python programming\",\"market\":\"en-US\"}')]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import prompty\n",
     "import prompty.azure\n",
@@ -227,9 +238,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ToolCall(id='call_q8RGrkpn5vNsP6GrA7laajdF', name='find_entities', arguments='{\"query\":\"inventor of Python programming language\",\"market\":\"en-US\"}')]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "instructions = \"Who is the person who invented the Python programming language?\"\n",
     "prompty.execute(os.getcwd() + \"/researcher/researcher-2.prompty\", inputs={\"instructions\": instructions})"
@@ -252,9 +274,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ToolCall(id='call_bEAX3HMoD7cOU3561rZrSoE4', name='find_news', arguments='{\"query\":\"Microsoft\",\"market\":\"en-US\"}')]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "instructions = \"Find the latest news about Microsoft?\"\n",
     "prompty.execute(os.getcwd() + \"/researcher/researcher-2.prompty\", inputs={\"instructions\": instructions})"
@@ -349,9 +382,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 'call_4kTea7nN8cs2Lw7d4VgqFdCv',\n",
+       "  'function': 'find_information',\n",
+       "  'arguments': {'query': 'best educational material for learning Javascript programming',\n",
+       "   'market': 'en-US'},\n",
+       "  'result': {'pages': [{'url': 'https://www.freecodecamp.org/news/23-free-websites-to-learn-javascript/',\n",
+       "     'name': '23 Free Websites to Learn JavaScript - freeCodeCamp.org',\n",
+       "     'description': \"This complete 134 part JavaScript tutorial for beginners will teach you everything you need to know to get started with the JavaScript programming language. 6. JavaScript.info. Learn JavaScript from the basics to advanced topics with simple yet detailed explanations. As the name implies, this website's tutorials are focused on JavaScript only.\"},\n",
+       "    {'url': 'https://www.classcentral.com/report/best-javascript-courses/',\n",
+       "     'name': '11 Best JavaScript Courses for 2024: Create Interactive Websites',\n",
+       "     'description': 'Here are the best online courses to learn JavaScript, the programming language mainly used by web developers to create interactive, dynamic websites. ... We’ve been combing through online education for more than a decade to aggregate a catalog of 200,000 online courses and 200,000 reviews written by our users. And we’re online learners ...'},\n",
+       "    {'url': 'https://hackr.io/blog/best-javascript-courses',\n",
+       "     'name': '12 Best JavaScript Courses Online in 2024 [Free + Paid] - Hackr',\n",
+       "     'description': 'Want to learn JavaScript? We’ve found the 12 best JavaScript courses online in 2024, including free & paid options for beginners to experienced developers. ... reading materials, quizzes, and assignments across the 5 modules. ... they are one of the very best free resources for learning about programming.'},\n",
+       "    {'url': 'https://www.coursera.org/learn/programming-with-javascript',\n",
+       "     'name': 'Programming with JavaScript - Coursera',\n",
+       "     'description': 'JavaScript is the programming language that powers the modern web. In this course, you will learn the basic concepts of web development with JavaScript. You will work with functions, objects, arrays, variables, data types, the HTML DOM, and much more.'},\n",
+       "    {'url': 'https://hackr.io/blog/javascript-books',\n",
+       "     'name': '16 Best JavaScript Books for Beginners & Pros [2024] - Hackr',\n",
+       "     'description': 'It’s solidly in contention for the best book for learning JavaScript if you want your kids to learn the fundamentals of the language. We’d happily call this one of the best JavaScript programming books because although it’s marketed to a younger audience, even adults can lean from it too.'}],\n",
+       "   'related': ['best courses for using js',\n",
+       "    'best online courses for javascript',\n",
+       "    'best websites for learning js',\n",
+       "    'free websites to learn javascript',\n",
+       "    'best free js courses',\n",
+       "    'best online courses for js',\n",
+       "    'learn to use js for free',\n",
+       "    'free js learning sites']}}]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -361,7 +431,7 @@
     "\n",
     "from researcher3 import execute_researcher_prompty, execute_function_calls\n",
     "\n",
-    "instructions = \"Can you find the best educational material for learning Python programming\"\n",
+    "instructions = \"Can you find the best educational material for learning Javascript programming\"\n",
     "\n",
     "# Execute the researcher prompty to get a list of functions calls\n",
     "function_calls = execute_researcher_prompty(instructions=instructions)\n",
