--- a/docs/workshop/workshop-2-tracing.ipynb
+++ b/docs/workshop/workshop-2-tracing.ipynb
@@ -56,9 +56,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🚀 Want to dive into the world of AI development? Here’s the ultimate guide to kickstart your career as an AI Developer! 🤖✨ #AI #TechCareer\n",
+      "\n",
+      "1/4 🌟 Curious about what an AI Developer does? They create intelligent applications that can learn, reason, and make decisions. Think Skynet, but friendly! Dive into coding, data science, and machine learning to join this futuristic field. #TechTuesday\n",
+      "\n",
+      "2/4 💡 Skills you need: Master programming languages like Python & R, get comfy with AI frameworks (TensorFlow, PyTorch), and understand data handling. Courses on @coursera and @GeeksforGeeks provide the perfect launchpad! #LearningNeverStops\n",
+      "\n",
+      "3/4 🔧 Hands-on experience: Build a portfolio with projects on @github and showcase your prowess. Start with mini-projects - a chatbot, image recognizer, or even a simple recommendation system. #BuildInPublic #AIProjects\n",
+      "\n",
+      "4/4 🌐 Big names like @GoogleAI and @Azure are platforms to develop your AI marvels. Explore their tools and APIs to bring your ideas to life! Stay tuned to @MSFTAIShow for loads of inspiration. Ready to shape the AI future? 🌍🚀 #FutureIsNow #AIRevolution\n",
+      "\n",
+      "👾 Feel free to tag your friends who are ready to take the AI plunge! Let’s shape a smarter future together! 💪✨ #Developers #ArtificialIntelligence\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -68,8 +86,8 @@
     "\n",
     "from social import run_social_media_agent\n",
     "\n",
-    "research_instructions = \"Find information about AI Agents\"\n",
-    "social_media_instructions = \"Write a fun and engaging twitter thread about AI Agents given the research.\"\n",
+    "research_instructions = \"Find information about AI Developers\"\n",
+    "social_media_instructions = \"Write a fun and engaging twitter thread about AI Developers given the research.\"\n",
     "\n",
     "run_social_media_agent(instructions=research_instructions, social_media_instructions = social_media_instructions)"
    ]
@@ -158,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
