--- a/docs/workshop/LAB-SETUP.ipynb
+++ b/docs/workshop/LAB-SETUP.ipynb
@@ -22,18 +22,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# CREDENTIALS\n",
-    "Username     = \"Username\"\n",
-    "\n",
-    "Password     = \"Password\"\n",
-    "\n",
-    "AzureEnvName = \"AzureEnvName\"\n",
-    "\n",
-    "Subscription = \"Subscription\""
+    "Username     = \"User1-46421221@LODSPRODMCA.onmicrosoft.com\"\n",
+    "Password     = \"Bh0De0!!De\"\n",
+    "AzureEnvName = \"AITOUR46421221\"\n",
+    "Subscription = \"dcbbcde1-d8d6-44e4-97bb-8538e99de801\""
    ]
   },
   {
@@ -60,9 +57,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[0;33m!\u001b[0m First copy your one-time code: \u001b[0;1;39m4C6D-A4B1\u001b[0m\n",
+      "\u001b[0;1;39mOpen this URL\u001b[0m to continue in your web browser: https://github.com/login/device\n",
+      "\u001b[0;32m✓\u001b[0m Authentication complete.\n",
+      "- gh config set -h github.com git_protocol https\n",
+      "\u001b[0;32m✓\u001b[0m Configured git protocol\n",
+      "\u001b[0;33m!\u001b[0m Authentication credentials saved in plain text\n",
+      "\u001b[0;32m✓\u001b[0m Logged in as \u001b[0;1;39mjaimecartodb\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "! echo Y | GITHUB_TOKEN=\"\" gh auth login --hostname github.com --git-protocol https --web --scopes workflow "
    ]
@@ -76,9 +88,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[K\u001b[0;32m✓\u001b[0m Created fork \u001b[0;1;39mjaimecartodb/contoso-creative-writer\u001b[0m\n",
+      "\u001b[0;32m✓\u001b[0m Renamed remote \u001b[0;1;39morigin\u001b[0m to \u001b[0;1;39mupstream\u001b[0m\n",
+      "\u001b[0;32m✓\u001b[0m Added remote \u001b[0;1;39morigin\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "! GITHUB_TOKEN=\"\" gh repo fork --remote"
    ]
@@ -96,9 +118,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[93mAuthentication with username and password in the command line is strongly discouraged. Use one of the recommended authentication methods based on your requirements. For more details, see https://go.microsoft.com/fwlink/?linkid=2276314\u001b[0m\n",
+      "[\n",
+      "  {\n",
+      "    \"cloudName\": \"AzureCloud\",\n",
+      "    \"homeTenantId\": \"4cfe372a-37a4-44f8-91b2-5faf34253c62\",\n",
+      "    \"id\": \"dcbbcde1-d8d6-44e4-97bb-8538e99de801\",\n",
+      "    \"isDefault\": true,\n",
+      "    \"managedByTenants\": [],\n",
+      "    \"name\": \"AIDay-lod49942329\",\n",
+      "    \"state\": \"Enabled\",\n",
+      "    \"tenantDefaultDomain\": \"LODSPRODMCA.onmicrosoft.com\",\n",
+      "    \"tenantDisplayName\": \"LODS-Prod-MCA\",\n",
+      "    \"tenantId\": \"4cfe372a-37a4-44f8-91b2-5faf34253c62\",\n",
+      "    \"user\": {\n",
+      "      \"name\": \"User1-46421221@LODSPRODMCA.onmicrosoft.com\",\n",
+      "      \"type\": \"user\"\n",
+      "    }\n",
+      "  }\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
     "! az login -u $Username -p $Password"
    ]
@@ -114,9 +162,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "- **Username**: `User1-46421221@LODSPRODMCA.onmicrosoft.com`\n",
+       " - **Password**: `Bh0De0!!De`"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.display import Markdown\n",
     "Markdown(f\"- **Username**: `{Username}`\\n - **Password**: `{Password}`\")"
@@ -124,9 +187,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start by copying the next code: \u001b[1mGZXXB7EBF\u001b[0m\n",
+      "Then, go to: https://microsoft.com/devicelogin\n",
+      "Waiting for you to complete authentication in the browser...\n",
+      "Device code authentication completed.\n",
+      "Logged in to Azure.ing subscriptions...\n"
+     ]
+    }
+   ],
    "source": [
     "! azd auth login --use-device-code --no-prompt"
    ]
@@ -151,9 +226,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "azd env refresh -e AITOUR46421221"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.display import Markdown\n",
     "Markdown(f\"azd env refresh -e {AzureEnvName}\")"
@@ -175,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,9 +287,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"condition\": null,\n",
+      "  \"conditionVersion\": null,\n",
+      "  \"createdBy\": null,\n",
+      "  \"createdOn\": \"2024-12-05T10:15:00.857649+00:00\",\n",
+      "  \"delegatedManagedIdentityResourceId\": null,\n",
+      "  \"description\": null,\n",
+      "  \"id\": \"/subscriptions/dcbbcde1-d8d6-44e4-97bb-8538e99de801/resourceGroups/rg-AITOUR46421221/providers/Microsoft.Authorization/roleAssignments/7a3761bb-072b-4d62-b200-3306ab9eaf0b\",\n",
+      "  \"name\": \"7a3761bb-072b-4d62-b200-3306ab9eaf0b\",\n",
+      "  \"principalId\": \"ad6b71e2-8408-4606-82f7-f32ad0ce5a36\",\n",
+      "  \"principalType\": \"User\",\n",
+      "  \"resourceGroup\": \"rg-AITOUR46421221\",\n",
+      "  \"roleDefinitionId\": \"/subscriptions/dcbbcde1-d8d6-44e4-97bb-8538e99de801/providers/Microsoft.Authorization/roleDefinitions/8ebe5a00-799e-43f5-93ac-243d3dce84a7\",\n",
+      "  \"scope\": \"/subscriptions/dcbbcde1-d8d6-44e4-97bb-8538e99de801/resourceGroups/rg-AITOUR46421221\",\n",
+      "  \"type\": \"Microsoft.Authorization/roleAssignments\",\n",
+      "  \"updatedBy\": \"ad6b71e2-8408-4606-82f7-f32ad0ce5a36\",\n",
+      "  \"updatedOn\": \"2024-12-05T10:15:01.497682+00:00\"\n",
+      "}\n",
+      "{\n",
+      "  \"condition\": null,\n",
+      "  \"conditionVersion\": null,\n",
+      "  \"createdBy\": null,\n",
+      "  \"createdOn\": \"2024-12-05T10:15:03.726900+00:00\",\n",
+      "  \"delegatedManagedIdentityResourceId\": null,\n",
+      "  \"description\": null,\n",
+      "  \"id\": \"/subscriptions/dcbbcde1-d8d6-44e4-97bb-8538e99de801/resourceGroups/rg-AITOUR46421221/providers/Microsoft.Authorization/roleAssignments/ab0cc3d0-eb8b-4582-b5d3-ec3d09d39139\",\n",
+      "  \"name\": \"ab0cc3d0-eb8b-4582-b5d3-ec3d09d39139\",\n",
+      "  \"principalId\": \"ad6b71e2-8408-4606-82f7-f32ad0ce5a36\",\n",
+      "  \"principalType\": \"User\",\n",
+      "  \"resourceGroup\": \"rg-AITOUR46421221\",\n",
+      "  \"roleDefinitionId\": \"/subscriptions/dcbbcde1-d8d6-44e4-97bb-8538e99de801/providers/Microsoft.Authorization/roleDefinitions/1407120a-92aa-4202-b7e9-c0e197c71c8f\",\n",
+      "  \"scope\": \"/subscriptions/dcbbcde1-d8d6-44e4-97bb-8538e99de801/resourceGroups/rg-AITOUR46421221\",\n",
+      "  \"type\": \"Microsoft.Authorization/roleAssignments\",\n",
+      "  \"updatedBy\": \"ad6b71e2-8408-4606-82f7-f32ad0ce5a36\",\n",
+      "  \"updatedOn\": \"2024-12-05T10:15:04.413028+00:00\"\n",
+      "}\n",
+      "{\n",
+      "  \"condition\": null,\n",
+      "  \"conditionVersion\": null,\n",
+      "  \"createdBy\": null,\n",
+      "  \"createdOn\": \"2024-12-05T10:15:06.430426+00:00\",\n",
+      "  \"delegatedManagedIdentityResourceId\": null,\n",
+      "  \"description\": null,\n",
+      "  \"id\": \"/subscriptions/dcbbcde1-d8d6-44e4-97bb-8538e99de801/resourceGroups/rg-AITOUR46421221/providers/Microsoft.Authorization/roleAssignments/c9c2222d-9e9c-449a-a18a-797247481b80\",\n",
+      "  \"name\": \"c9c2222d-9e9c-449a-a18a-797247481b80\",\n",
+      "  \"principalId\": \"ad6b71e2-8408-4606-82f7-f32ad0ce5a36\",\n",
+      "  \"principalType\": \"User\",\n",
+      "  \"resourceGroup\": \"rg-AITOUR46421221\",\n",
+      "  \"roleDefinitionId\": \"/subscriptions/dcbbcde1-d8d6-44e4-97bb-8538e99de801/providers/Microsoft.Authorization/roleDefinitions/5e0bd9bd-7b93-4f28-af87-19fc36ad61bd\",\n",
+      "  \"scope\": \"/subscriptions/dcbbcde1-d8d6-44e4-97bb-8538e99de801/resourceGroups/rg-AITOUR46421221\",\n",
+      "  \"type\": \"Microsoft.Authorization/roleAssignments\",\n",
+      "  \"updatedBy\": \"ad6b71e2-8408-4606-82f7-f32ad0ce5a36\",\n",
+      "  \"updatedOn\": \"2024-12-05T10:15:07.109444+00:00\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "! bash ../../infra/hooks/roles.sh"
    ]
@@ -215,9 +365,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1mRunning hooks (azd hooks run)\u001b[0m\n",
+      "\u001b[90mFinding and executing \u001b[36mpostprovision\u001b[0m hooks for environment \u001b[36mAITOUR46421221\u001b[0m.\u001b[0m\n",
+      "\n",
+      "\u001b[K  Running 1 postprovision command hook(s) for project\n",
+      "\n",
+      "\u001b[K  ──── Project: postprovision Hook Output ──────────────────────────────────────\n",
+      "\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\n",
+      "\u001b[K\u001b[1A\u001b[1A─────────────────────────────────────────────────────────────────────\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K  --- ✅ | 1. Post-provisioning - env configured ---\n",
+      "\n",
+      "\u001b[K\u001b[1A\u001b[1A─────────────────────────────────────────────────────────────────────\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K  --- ✅ | 1. Post-provisioning - env configured ---\n",
+      "\u001b[K  Installing dependencies from \"requirements.txt\"\n",
+      "\n",
+      "\u001b[K\u001b[1A\u001b[1A─────────────────────────────────────────────────────────────────────\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K  --- ✅ | 1. Post-provisioning - env configured ---\n",
+      "\u001b[K  Installing dependencies from \"requirements.txt\"\n",
+      "\u001b[K  --- ✅ | 2. Post-provisioning - ready execute notebooks ---\n",
+      "\n",
+      "\u001b[K\u001b[1A\u001b[1A─────────────────────────────────────────────────────────────────────\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K  --- ✅ | 1. Post-provisioning - env configured ---\n",
+      "\u001b[K  Installing dependencies from \"requirements.txt\"\n",
+      "\u001b[K  --- ✅ | 2. Post-provisioning - ready execute notebooks ---\n",
+      "\u001b[K  Populating data ....\n",
+      "\n",
+      "\u001b[K\u001b[1A\u001b[1A─────────────────────────────────────────────────────────────────────\n",
+      "\u001b[K\n",
+      "\u001b[K\n",
+      "\u001b[K  --- ✅ | 1. Post-provisioning - env configured ---\n",
+      "\u001b[K  Installing dependencies from \"requirements.txt\"\n",
+      "\u001b[K  --- ✅ | 2. Post-provisioning - ready execute notebooks ---\n",
+      "\u001b[K  Populating data ....\n",
+      "\u001b[K  --- ✅ | 3. Post-provisioning - populated data ---\n",
+      "\n",
+      "\u001b[K\u001b[1A\u001b[1A─────────────────────────────────────────────────────────────────────\n",
+      "\u001b[K  --- ✅ | 1. Post-provisioning - env configured ---\n",
+      "\u001b[K  Installing dependencies from \"requirements.txt\"\n",
+      "\u001b[K  --- ✅ | 2. Post-provisioning - ready execute notebooks ---\n",
+      "\u001b[K  Populating data ....\n",
+      "\u001b[K  --- ✅ | 3. Post-provisioning - populated data ---\n",
+      "\u001b[K  --- 🎉 | 4. Access your ACA deployed web app here: https://agent-web.lemonbe\n",
+      "\u001b[K  ach-007a63dd.canadaeast.azurecontainerapps.io\n",
+      "\n",
+      "\u001b[KRunning 1 postprovision command hook(s) for project──────────────────────────\n",
+      "  \u001b[32m(✓) Done:\u001b[0m Running 1 postprovision command hook(s) for project\n",
+      "Running 0 postprovision service hook(s) for api\n",
+      "  \u001b[33m(!) Warning:\u001b[0m Running 0 postprovision service hook(s) for api (No hook found)\n",
+      "Running 0 postprovision service hook(s) for web\n",
+      "  \u001b[33m(!) Warning:\u001b[0m Running 0 postprovision service hook(s) for web (No hook found)\n",
+      "\u001b[32m\n",
+      "SUCCESS: Your hooks have been run successfully\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "! echo 1 | azd hooks run postprovision -e $AzureEnvName"
    ]
